# ApolloRS

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  core
artifacts/forensics/: include-graph.dot  include-graph.json  repository-inventory.csv  repository-inventory.json  source-manifest.sha256
crates/agc-assembler/: Cargo.toml
crates/agc-assembler/src/: lib.rs
crates/agc-ast/: Cargo.toml
crates/agc-ast/src/: lib.rs
crates/agc-cpu/: Cargo.toml
crates/agc-cpu/src/: lib.rs
crates/agc-dsky/: Cargo.toml
crates/agc-dsky/src/: lib.rs
crates/agc-faults/: Cargo.toml
crates/agc-faults/src/: lib.rs
crates/agc-fixed/: Cargo.toml
crates/agc-fixed/src/: lib.rs
crates/agc-interpreter/: Cargo.toml
crates/agc-interpreter/src/: lib.rs
crates/agc-ir/: Cargo.toml
crates/agc-ir/src/: lib.rs
crates/agc-isa/: Cargo.toml
crates/agc-isa/src/: lib.rs
crates/agc-loader/: Cargo.toml
crates/agc-loader/src/: lib.rs
crates/agc-memory/: Cargo.toml
crates/agc-memory/src/: lib.rs
crates/agc-mission/: Cargo.toml
crates/agc-mission/src/: lib.rs
crates/agc-overlay/: Cargo.toml
crates/agc-overlay/src/: lib.rs
crates/agc-parser/: Cargo.toml
crates/agc-parser/src/: lib.rs
crates/agc-reports/: Cargo.toml
crates/agc-reports/src/: lib.rs
crates/agc-runtime/: Cargo.toml
crates/agc-runtime/src/: lib.rs
crates/agc-source/: Cargo.toml
crates/agc-source/src/: lib.rs
crates/agc-symbols/: Cargo.toml
crates/agc-symbols/src/: lib.rs
crates/agc-trace/: Cargo.toml
crates/agc-trace/src/: lib.rs
crates/agc-transpiler/: Cargo.toml
crates/agc-transpiler/src/: lib.rs
crates/agc-validation/: Cargo.toml
crates/agc-validation/src/: lib.rs
crates/agc-word/: Cargo.toml
crates/agc-word/src/: lib.rs
crates/agc-xref/: Cargo.toml
crates/agc-xref/src/: lib.rs
crates/apollors-cli/: Cargo.toml
crates/apollors-cli/src/: main.rs
docs/: implementation-status.md
docs/adr/: 0001-immutable-historical-source.md  0002-executable-semantics-before-translation.md  0003-raw-exact-strong-types.md  0004-deterministic-trace-and-replay.md  0005-qualified-differential-oracles.md  README.md
docs/architecture/: workspace.md
docs/research/: assumptions.md  cycle-1-artifacts.md  reference-and-originality.md  repository-forensics.md  research-plan.md  roadmap.md  semantic-risk-register.md
docs/validation/: verification-matrix.md  vertical-slice-dod.md  yaagc-exact-trace.patch  yaagc-reference.md
historical/: README.md
overlays/: comanche055.json  luminary099.json
paper/: README.md
tools/forensics/: inventory.py
