[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simransummermalik/ApolloRS"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
indexmap = { version = "2.11", features = ["serde"] }
petgraph = { version = "0.8", features = ["serde-1"] }
proptest = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Bit-width conversions are explicit and range-checked at AGC type boundaries;
# these broad style lints otherwise obscure architecture-level review.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
naive_bytecount = "allow"
return_self_not_must_use = "allow"
# Six-digit octal words intentionally mirror AGC listings and hardware manuals.
unreadable_literal = "allow"
# Instruction decoders and two-pass assembly are clearer as cohesive semantic
# units than as helpers split only to satisfy a line-count heuristic.
too_many_lines = "allow"
# Several public APIs intentionally consume syntax/event values to make
# ownership and deterministic queueing explicit.
needless_pass_by_value = "allow"
# Associated collection types are intentionally hidden behind crate APIs.
default_trait_access = "allow"
