[package]
name = "agc-ast"
description = "Loss-preserving typed syntax tree for AGC source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-source = { path = "../agc-source" }
serde.workspace = true

[lints]
workspace = true

