[package]
name = "agc-cpu"
description = "Deterministic Block II AGC CPU, interrupts, and cycle accounting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-isa = { path = "../agc-isa" }
agc-memory = { path = "../agc-memory" }
agc-trace = { path = "../agc-trace" }
agc-word = { path = "../agc-word" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true

