[package]
name = "agc-fixed"
description = "Scale-aware AGC fixed-point values"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-word = { path = "../agc-word" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true

