[package]
name = "agc-ir"
description = "Bank-aware semantic intermediate representation for AGC programs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-ast = { path = "../agc-ast" }
agc-word = { path = "../agc-word" }
indexmap.workspace = true
serde.workspace = true

[lints]
workspace = true

