[package]
name = "agc-overlay"
description = "Auditable compatibility overlays for immutable AGC sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-ast = { path = "../agc-ast" }
agc-source = { path = "../agc-source" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true

