[package]
name = "agc-parser"
description = "Diagnostic AGC source parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-ast = { path = "../agc-ast" }
agc-source = { path = "../agc-source" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

