[package]
name = "agc-reports"
description = "Provenance-bearing ApolloRS research artifact generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-mission = { path = "../agc-mission" }
agc-source = { path = "../agc-source" }
agc-symbols = { path = "../agc-symbols" }
agc-trace = { path = "../agc-trace" }
agc-validation = { path = "../agc-validation" }
agc-xref = { path = "../agc-xref" }
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true

