[package]
name = "agc-trace"
description = "Deterministic AGC trace, replay, and divergence schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-word = { path = "../agc-word" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true

