[package]
name = "agc-xref"
description = "AGC cross-reference, control-flow, and subsystem graph analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agc-ast = { path = "../agc-ast" }
agc-ir = { path = "../agc-ir" }
agc-symbols = { path = "../agc-symbols" }
petgraph.workspace = true
serde.workspace = true

[lints]
workspace = true

